--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,7 +2,7 @@ name: Docs
 on:
   push:
     branches:
-      - main
+      - ja
 
 jobs:
   deploy:
@@ -21,7 +21,7 @@ jobs:
         echo `pwd`/mdbook >> $GITHUB_PATH
     - name: Deploy GitHub Pages
       run: |
-        cd docs
+        cd translation/ja/docs
         mdbook build
         git worktree add gh-pages
         git config user.name "Deploy from CI"
