--- a/translation/po4a.cfg
+++ b/translation/po4a.cfg
@@ -91,3 +91,5 @@
 
 [type:Markdown] ../NEWS.md                                                   $lang:$lang/docs/src/NEWS.md \
                 opt:"--keep 6" pot=news
+
+[type:Markdown] ../CONTRIBUTING.md                                           $lang:$lang/docs/src/CONTRIBUTING.md pot=all
