Translate version 6.4.3 news entry.

--- a/translation/po4a.cfg
+++ b/translation/po4a.cfg
@@ -69,7 +69,7 @@
 [type:Markdown] ../docs/src/sequences/with-dynamic-attributes.md             $lang:$lang/docs/src/sequences/with-dynamic-attributes.md pot=all
 [type:Markdown] ../docs/src/sequences/without-a-block.md                     $lang:$lang/docs/src/sequences/without-a-block.md pot=all
 [type:Markdown] ../docs/src/setup/summary.md                                 $lang:$lang/docs/src/setup/summary.md pot=all
-[type:Markdown] ../docs/src/summary.md                                       $lang:$lang/docs/src/summary.md pot=all
+[type:Markdown] ../docs/src/intro.md                                         $lang:$lang/docs/src/intro.md pot=all
 [type:Markdown] ../docs/src/traits/as-implicit-attributes.md                 $lang:$lang/docs/src/traits/as-implicit-attributes.md pot=all
 [type:Markdown] ../docs/src/traits/attribute-precedence.md                   $lang:$lang/docs/src/traits/attribute-precedence.md pot=all
 [type:Markdown] ../docs/src/traits/enum.md                                   $lang:$lang/docs/src/traits/enum.md pot=all
