Add about-translation section.

--- a/translation/po4a.cfg
+++ b/translation/po4a.cfg
@@ -92,4 +92,5 @@
 [type:Markdown] ../NEWS.md                                                   $lang:$lang/docs/src/NEWS.md \
                 opt:"--keep 6" pot=news
 
-[type:Markdown] ../CONTRIBUTING.md                                           $lang:$lang/docs/src/CONTRIBUTING.md pot=all
+[type:Markdown] ../CONTRIBUTING.md                                           $lang:$lang/docs/src/CONTRIBUTING.md pot=all \
+                add_ja:add/ja/Japanese-translation
