--- a/docs/book.toml
+++ b/docs/book.toml
@@ -5,6 +5,9 @@ multilingual = false
 src = "src"
 title = "factory_bot"
 
+[output.html]
+site-url = "/factory_bot/"
+
 [output.html.redirect]
 "/setup/rspec.html" = "https://github.com/thoughtbot/factory_bot/wiki/Integration:-RSpec"
 "/setup/cucumber.html" = "https://github.com/thoughtbot/factory_bot/wiki/Integration:-Cucumber"
