Generate mdBook config file from source.

--- a/translation/Makefile
+++ b/translation/Makefile
@@ -6,6 +6,6 @@ translate:
 	po4a ${PO4A_OPTS} po4a.cfg
 .PHONY: translate
 
-ja/docs/book.toml: ../docs/book.toml
-	-mkdir $(dir $@)
-	ln $< $@
+ja/docs/book.toml: ../docs/book.toml convert-mdBook-config
+	mkdir -p $(dir $@)
+	./convert-mdBook-config < $< > $@
